feat(msg): 拆分帮派管理员和超级管理员